--- a/_includes/_macro/sidebar.html
+++ b/_includes/_macro/sidebar.html
@@ -107,6 +107,7 @@
               </span>
             {% endfor %}
           {% endif %}
+          <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28481790&auto=1&height=66"></iframe>
         </div>
 
         {% assign cc = 'by, by-nc, by-nc-nd, by-nc-sa, by-nd, by-sa, zero' | split: ', ' %}
