--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -4,7 +4,7 @@
   &copy; {% if site.since and since != current %} {{ since }} - {% endif %}
   <span itemprop="copyrightYear">{{ current }}</span>
   <span class="with-love">
-    <i class="fas fa-code"></i>
+    <i class="fas fa-code-{{ site.authoricon }}"></i>
   </span>
   <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
 </div>
