--- a/_includes/index.html
+++ b/_includes/index.html
@@ -5,6 +5,7 @@
   {% for post in posts %}
     {% assign is_index = true %}
     {% include _macro/post.html %}
+    {% include effects.html %}
   {% endfor %}
 </section>
 
