--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -8,3 +8,4 @@
   </span>
   <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
 </div>
+<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
