--- a/_includes/home/scripts.html
+++ b/_includes/home/scripts.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/javascripts/jquery.fullPage.min.js"></script>
 <script src="{{ site.baseurl }}/assets/javascripts/jquery.easing.min.js"></script>
 <script>
