--- a/_includes/common/gtm-head.html
+++ b/_includes/common/gtm-head.html
@@ -5,4 +5,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','{{ site.google_tag_manager }}');</script>
 <!-- End Google Tag Manager -->
-<link rel="shortcut icon" href="favicon/favicon.ico"
+<link rel="shortcut icon" href="favicon/favicon.ico">
