--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -112,4 +112,5 @@ $(document).ready(function () {
         $(".post-image > img").unveil(450);
     });
 </script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+<!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
