--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -114,3 +114,4 @@ $(document).ready(function () {
 </script>
 
 <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
+<script src="https://cdn.bootcss.com/mathjax/2.7.2/latest.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
