--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -113,5 +113,13 @@ $(document).ready(function () {
     });
 </script>
 
+
+<script>
+MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']]
+  }
+};
+</script>
 <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
 <script src="https://cdn.bootcss.com/mathjax/2.7.2/latest.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
