--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -123,8 +123,9 @@ MathJax = {
   }
 };
 </script>
+
 <script type="text/javascript" id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+  src="https://cdn.bootcdn.net/ajax/libs/mathjax/3.2.2/es5/tex-svg.js">
 </script>
 <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
 <!-- <script src="https://cdn.bootcss.com/mathjax/2.7.2/latest.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
