--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -41,7 +41,7 @@ $(document).ready(function () {
 </script>
 
 <!-- Show menu overlay + Jekyll Simple Search option -->
-<script src="{{ site.baseurl }}/assets/javascripts/jekyll-search.jquery.js"></script>
+<script src="{{ site.jsurl }}/assets/javascripts/jekyll-search.jquery.js"></script>
 <script>
 $(document).ready(function () {
     $('.search-field').simpleJekyllSearch({
@@ -88,11 +88,11 @@ $(document).ready(function () {
 
 <script src='//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.min.js'></script>
 <script src='//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js'></script>
-<script src="{{ site.baseurl }}/assets/javascripts/unveil/jquery.unveil.min.js"></script>
+<script src="{{ site.jsurl }}/assets/javascripts/unveil/jquery.unveil.min.js"></script>
 
 <script>
-    window.jQuery.fancybox || document.write('<script src="{{ site.baseurl }}/assets/javascripts/fancybox/jquery.fancybox.pack.js?v=2.1.4"><\/script>')
-    window.jQuery.fancybox.helpers.buttons || document.write('<script src="{{ site.baseurl }}/assets/javascripts/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"><\/script>')
+    window.jQuery.fancybox || document.write('<script src="{{ site.jsurl }}/assets/javascripts/fancybox/jquery.fancybox.pack.js?v=2.1.4"><\/script>')
+    window.jQuery.fancybox.helpers.buttons || document.write('<script src="{{ site.jsurl }}/assets/javascripts/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"><\/script>')
 </script>
 
 <script>
