--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -86,8 +86,8 @@ $(document).ready(function () {
 })(jQuery, window);
 </script>
 
-<script src='//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.min.js'></script>
-<script src='//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js'></script>
+<script src='https://cdn.bootcdn.net/ajax/libs/fancybox/2.1.4/jquery.fancybox.min.js'></script>
+<script src='https://cdn.bootcdn.net/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js'></script>
 <script src="{{ site.jsurl }}/assets/javascripts/unveil/jquery.unveil.min.js"></script>
 
 <script>
