--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -45,6 +45,7 @@ MathJax = {
 .numbered_equation_container {
     width: 100%;
     display: flex;
+    overflow-x: auto;
     justify-content: space-between;
     align-items: center;
 }
