--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -55,9 +55,11 @@ MathJax = {
 .equation_number {
     display: table-column;
 }
-.mjx-container[jax="CHTML"][display="true"] {
-    overflow-x: auto;
-    overflow-y: hidden;
+mjx-container {
+  display: block;
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100%;
 }
 </style>
 
