--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -24,6 +24,15 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
+<!-- 新增滚动偏移设置 -->
+<style>
+  html {
+    scroll-padding-top: 70px !important; /* 与导航栏实际高度一致 */
+    
+    /* 可选：添加平滑滚动效果 */
+    scroll-behavior: smooth;
+  }
+</style>
 
 <!-- Support for MatJax -->
 
