--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -39,7 +39,8 @@
 <script>
 MathJax = {
   tex: {
-    inlineMath: [['$', '$'], ['\\(', '\\)']]
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    tags: 'ams'
   },
   svg: {
     fontCache: 'global'
