--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,12 +8,11 @@
    sorted by the dependencies. Also, the first two lines of the file are required by Jekyll.
  */
 
-@import
+@import 
     "vendor/breakpoint/breakpoint",
 
     "themes",
-    "theme/default",
-    "theme/dark",
+    "theme/{{ site.site_theme | default: 'default' }}",
 
     "include/mixins",
     "vendor/susy/susy",
@@ -35,7 +34,7 @@
     "layout/page",
     "layout/archive",
     "layout/sidebar",
-
+    
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands",
