--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -12,9 +12,52 @@
 <meta name="theme-color" content="#ffffff"/>
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
+<!-- 新增滚动偏移设置 -->
+<style>
+  html {
+    scroll-padding-top: 70px !important; /* 与导航栏实际高度一致 */
+    scroll-behavior: smooth;
+  }
+</style>
 
 <!-- Support for MatJax -->
+
+<script>
+MathJax = {
+  loader: {load: ['[tex]/ams', '[tex]/physics']},
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    tags: 'ams'
+  },
+  svg: {
+    fontCache: 'global'
+  }
+};
+</script>
+
 <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<style>
+.numbered_equation_container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.equation {
+    width: 100%;
+    overflow-x: auto;
+}
+.equation_number {
+    display: table-column;
+}
+
+mjx-container {
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100%;
+}
+</style>
 
 <!-- end custom head snippets -->
