--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -67,8 +67,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 300px;
-    margin-right: -300px;
+    width: $right-sidebar-width-narrow;
+    margin-right: -1 * $right-sidebar-width-narrow;
     padding-left: 1em;
     z-index: 10;
 
