--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -67,8 +67,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: $right-sidebar-width-narrow;
-    margin-right: -1 * $right-sidebar-width-narrow;
+    width: 200px;
+    margin-right: -1 * 200px;
     padding-left: 1em;
     z-index: 10;
 
@@ -89,8 +89,8 @@
   }
 
   @include breakpoint($x-large) {
-    width: $right-sidebar-width;
-    margin-right: -1 * $right-sidebar-width;
+    width: 300px;
+    margin-right: -1 * 300px;
   }
 }
 
