--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -379,23 +379,87 @@
 /*
    Table of contents navigation
    ========================================================================== */
+// .toc {
+//   font-family: $sans-serif-narrow;
+//   color: var(--global-text-color-light);
+//   text-transform: uppercase;
+//   letter-spacing: 1px;
+//   background-color: #fff;
+//   border: 1px solid var(--global-border-color);
+//   border-radius: $border-radius;
+//   box-shadow: $box-shadow;
+//
+//   .nav__title {
+//     color: #fff;
+//     font-size: $type-size-6;
+//     background: var(--global-base-color);
+//     border-top-left-radius: $border-radius;
+//     border-top-right-radius: $border-radius;
+//   }
+// }
+//
+// .toc__menu {
+//   margin: 0;
+//   padding: 0;
+//   width: 100%;
+//   list-style: none;
+//   font-size: 0.8rem;
+//
+//   a {
+//     display: block;
+//     padding: 0.5rem 1rem;
+//     color: var(--global-text-color-light);
+//     font-size: $type-size-7;
+//     font-weight: bold;
+//     line-height: 1.5;
+//     border-bottom: 1px solid var(--global-border-color);
+//     text-decoration-line: none !important;
+//
+//     &:hover {
+//       color: #000;
+//       background: var(--global-link-color-hover);
+//     }
+//   }
+//
+//   > li:last-child {
+//     a {
+//       border-bottom: none;
+//     }
+//   }
+//
+//   li ul > li a {
+//     padding-left: 2rem;
+//     font-weight: normal;
+//   }
+//
+//   /* hide sub sub links on small screens*/
+//   li > ul li {
+//     display: none;
+//
+//     @include breakpoint($medium) {
+//       display: block;
+//     }
+//   }
+// }
 
 .toc {
-  font-family: $sans-serif-narrow;
-  color: var(--global-text-color-light);
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  background-color: #fff;
-  border: 1px solid var(--global-border-color);
+  background-color: var(--global-toc-bg-color, #fff);
+  border: 1px solid var(--global-border-color, #eee);
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+  padding: 1rem;
+  font-family: $sans-serif-narrow;
 
   .nav__title {
-    color: #fff;
+    color: var(--global-text-color);
     font-size: $type-size-6;
-    background: var(--global-base-color);
-    border-top-left-radius: $border-radius;
-    border-top-right-radius: $border-radius;
+    font-weight: bold;
+    background: transparent;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid var(--global-border-color);
+    text-transform: uppercase;
+    letter-spacing: 1px;
   }
 }
 
@@ -404,36 +468,36 @@
   padding: 0;
   width: 100%;
   list-style: none;
-  font-size: 0.8rem;
 
   a {
     display: block;
-    padding: 0.5rem 1rem;
+    padding: 0.25rem 0;
     color: var(--global-text-color-light);
     font-size: $type-size-7;
-    font-weight: bold;
-    line-height: 1.5;
-    border-bottom: 1px solid var(--global-border-color);
-    text-decoration-line: none !important;
+    font-weight: normal;
+    line-height: 1.4;
+    text-decoration: none !important;
+    transition: color 0.2s ease-in-out;
 
     &:hover {
-      color: #000;
-      background: var(--global-link-color-hover);
+      color: var(--global-link-color-hover, #000);
+      text-decoration: underline !important;
     }
   }
 
-  > li:last-child {
-    a {
-      border-bottom: none;
-    }
+  > li > a {
+    font-weight: bold;
+    color: var(--global-text-color);
   }
 
   li ul > li a {
-    padding-left: 2rem;
-    font-weight: normal;
+    padding-left: 1.25rem;
   }
 
-  /* hide sub sub links on small screens*/
+  li ul li ul > li a {
+    padding-left: 2.5rem;
+  }
+
   li > ul li {
     display: none;
 
