--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -108,6 +108,73 @@
   }
 }
 
+// Toc 相关
+
+.toc {
+  background-color: var(--global-toc-bg-color, #fff);
+  border: 1px solid var(--global-border-color, #eee);
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
+  padding: 1rem;
+  font-family: $sans-serif-narrow;
+
+  .nav__title {
+    color: var(--global-text-color);
+    font-size: $type-size-6;
+    font-weight: bold;
+    background: transparent;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid var(--global-border-color);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+}
+
+.toc__menu {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+
+  a {
+    display: block;
+    padding: 0.25rem 0;
+    color: var(--global-text-color-light);
+    font-size: $type-size-7;
+    font-weight: normal;
+    line-height: 1.4;
+    text-decoration: none !important;
+    transition: color 0.2s ease-in-out;
+
+    &:hover {
+      color: var(--global-link-color-hover, #000);
+      text-decoration: underline !important;
+    }
+  }
+
+  > li > a {
+    font-weight: bold;
+    color: var(--global-text-color);
+  }
+
+  li ul > li a {
+    padding-left: 1.25rem;
+  }
+
+  li ul li ul > li a {
+    padding-left: 2.5rem;
+  }
+
+  li > ul li {
+    display: none;
+
+    @include breakpoint($medium) {
+      display: block;
+    }
+  }
+}
+
 // .sidebar__right {
 //   margin-bottom: 1em;
 //
