--- a/_sass/theme/_dark.scss
+++ b/_sass/theme/_dark.scss
@@ -1,8 +1,9 @@
 /* ==========================================================================
-   DARK THEME
-   ========================================================================== */
+    DEFAULT THEME - DARK VERSION
+    ========================================================================== */
 
 /* Color codes used for the theme */
+$primary-color              : #0ea1c5;
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
@@ -35,18 +36,20 @@ $sidebar-screen-min-width   : 1024px;
 
 /* Dark theme for the site */
 html[data-theme="dark"] {
-    --global-base-color                 : #{$background};
+    --global-base-color                 : #{$primary-color};
     --global-bg-color                   : #{$background};
-    --global-border-color               : #{$background-light};
+    --global-footer-bg-color            : #{$background};
+    --global-border-color               : #{$light-gray};
+    --global-dark-border-color          : #{$background-light};
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-gray};
-    --global-fig-caption-color          : #{$dark-gray};
+    --global-fig-caption-color          : #{$light-gray};
     --global-link-color                 : #{$link};
     --global-link-color-hover           : #{$link-dark};
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #{$text};
-    --global-masthead-link-color-hover  : #{$background-light};
+    --global-masthead-link-color-hover  : #{$primary-color};
     --global-text-color                 : #{$text};
-    --global-text-color-light           : #{$light-gray};
+    --global-text-color-light           : #f3f3f3;
     --global-thead-color                : #{$background-lighter};
 }
