--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -70,7 +70,7 @@
     top: 0;
     right: 0;
     width: 200px;
-    margin-right: -1 * 200px;
+    margin-right: -200px;
     padding-left: 1em;
     z-index: 10;
 
@@ -90,10 +90,10 @@
     }
   }
 
-  @include breakpoint($x-large) {
-    width: 300px;
-    margin-right: -1 * 300px;
-  }
+  // @include breakpoint($x-large) {
+  //   width: 300px;
+  //   margin-right: -1 * 300px;
+  // }
 }
 
 .splash .sidebar__right {
