--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -41,20 +41,14 @@ div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 1em;
   
-  /* 1. 背景色 */
   background-color: var(--global-code-background-color); 
-  
-  /* 2. 外边框 */
   border: 1px solid var(--global-border-color); 
-  
-  /* 3. 代码文字颜色 (替换了 $base05) */
-  /* 使用你定义的专门用于代码文本的颜色 */
   color: var(--global-code-text-color); 
 
   font-family: $monospace;
+  border-radius: 0;
+  box-shadow: none;
   font-size: $type-size-6;
-  line-height: 1.8;
-  border-radius: $border-radius;
 
   [dir=rtl] & {
     direction: ltr;
@@ -78,20 +72,12 @@ div.highlighter-rouge, figure.highlight {
     width: calc(100% - 1em);
     border: 0;
 
-    /* 行号列 */
     &.gutter,
     &.rouge-gutter {
       padding-inline-end: 1em;
       width: 1em;
-
-      /* 4. 行号颜色 (替换了 $base04) */
-      /* 使用浅灰色文本变量，区别于正文代码 */
       color: var(--global-text-color-light); 
-      
-      /* 5. 分隔线颜色 (替换了 $base04) */
-      /* 使用全局边框颜色，保持统一 */
       border-inline-end: 1px solid var(--global-border-color); 
-      
       text-align: end;
     }
 
