--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -40,14 +40,13 @@
 div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 1em;
-  
   background-color: var(--global-code-background-color); 
   border: 1px solid var(--global-border-color); 
+  
   color: var(--global-code-text-color); 
 
   font-family: $monospace;
-  border-radius: 0;
-  box-shadow: none;
+  border-radius: $border-radius;
 
   [dir=rtl] & {
     direction: ltr;
@@ -66,11 +65,18 @@ div.highlighter-rouge, figure.highlight {
   font-size: 1em;
   border: 0;
 
+  tr {
+    box-shadow: none !important;
+    background: transparent !important;
+    border-radius: 0 !important;
+    border: 0 !important;
+  }
+
   td {
     padding: 0;
     width: calc(100% - 1em);
     border: 0;
-
+    
     &.gutter,
     &.rouge-gutter {
       padding-inline-end: 1em;
@@ -79,7 +85,7 @@ div.highlighter-rouge, figure.highlight {
       border-inline-end: 1px solid var(--global-border-color); 
       text-align: end;
     }
-
+    
     &.code,
     &.rouge-code {
       padding-inline-start: 1em;
