--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -145,9 +145,8 @@ td > code {
   padding-bottom: 0.1rem;
   font-size: $type-size-6;
   background: var(--global-code-background-color);
-  border: 1px solid var(--global-thead-color);
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
+  border-radius: 0;
+  box-shadow: none;
   color: var(--global-code-text-color);
 
   &:before, &:after {
