--- a/_sass/layout/_notices.scss
+++ b/_sass/layout/_notices.scss
@@ -10,91 +10,178 @@
  *  </div>
  */
 
+// @mixin notice($notice-color) {
+//   margin: 2em 0 !important;  /* override*/
+//   padding: 1em;
+//   font-family: $global-font-family;
+//   font-size: $type-size-6 !important;
+//   text-indent: initial; /* override*/
+//   background-color: mix(#fff, $notice-color, 90%);
+//   border-radius: $border-radius;
+//   box-shadow: 0 1px 1px rgba($notice-color, 0.25);
+//   color: var(--global-code-text-color);
+//
+//   h4 {
+//     margin-top: 0 !important; /* override*/
+//     margin-bottom: 0.75em;
+//   }
+//
+//   @at-root .page__content #{&} h4 {
+//     /* using at-root to override .page-content h4 font size*/
+//     margin-bottom: 0;
+//     font-size: 1em;
+//   }
+//
+//   p {
+//     &:last-child {
+//       margin-bottom: 0 !important; /* override*/
+//     }
+//   }
+//
+//   h4 + p {
+//     /* remove space above paragraphs that appear directly after notice headline*/
+//     margin-top: 0;
+//     padding-top: 0;
+//   }
+//
+//   a {
+//     color: $notice-color;
+//
+//     &:hover {
+//       color: mix(#000, $notice-color, 40%);
+//     }
+//   }
+//
+//   code {
+//     background-color: mix(#fff, $notice-color, 95%)
+//   }
+//
+//   ul {
+//     &:last-child {
+//       margin-bottom: 0; /* override*/
+//     }
+//   }
+// }
+//
+// /* Default notice */
+//
+// .notice {
+//   @include notice($notice-color);
+// }
+//
+// /* Primary notice */
+//
+// .notice--primary {
+//   @include notice($notice-color);
+// }
+//
+// /* Info notice */
+//
+// .notice--info {
+//   @include notice($info-color);
+// }
+//
+// /* Warning notice */
+//
+// .notice--warning {
+//   @include notice($warning-color);
+// }
+//
+// /* Success notice */
+//
+// .notice--success {
+//   @include notice($success-color);
+// }
+//
+// /* Danger notice */
+//
+// .notice--danger {
+//   @include notice($danger-color);
+// }
+
+$notice-background-mix: 80% !default;
+$code-notice-background-mix: 90% !default;
+
 @mixin notice($notice-color) {
-  margin: 2em 0 !important;  /* override*/
+  margin: 2em 0 !important;
   padding: 1em;
+  color: $text-color;
   font-family: $global-font-family;
   font-size: $type-size-6 !important;
-  text-indent: initial; /* override*/
-  background-color: mix(#fff, $notice-color, 90%);
+  text-indent: initial;
+  background-color: mix($background-color, $notice-color, $notice-background-mix);
   border-radius: $border-radius;
   box-shadow: 0 1px 1px rgba($notice-color, 0.25);
-  color: var(--global-code-text-color);
 
   h4 {
-    margin-top: 0 !important; /* override*/
+    margin-top: 0 !important;
     margin-bottom: 0.75em;
+    line-height: inherit;
   }
 
   @at-root .page__content #{&} h4 {
-    /* using at-root to override .page-content h4 font size*/
     margin-bottom: 0;
     font-size: 1em;
   }
 
   p {
     &:last-child {
-      margin-bottom: 0 !important; /* override*/
+      margin-bottom: 0 !important;
     }
   }
 
   h4 + p {
-    /* remove space above paragraphs that appear directly after notice headline*/
     margin-top: 0;
     padding-top: 0;
   }
 
   a {
-    color: $notice-color;
+    color: mix(#000, $notice-color, 10%);
 
     &:hover {
-      color: mix(#000, $notice-color, 40%);
+      color: mix(#000, $notice-color, 50%);
     }
   }
 
+  @at-root #{selector-unify(&, "blockquote")} {
+    border-inline-start-color: mix(#000, $notice-color, 10%);
+  }
+
   code {
-    background-color: mix(#fff, $notice-color, 95%)
+    background-color: mix($background-color, $notice-color, $code-notice-background-mix);
+  }
+
+  pre code {
+    background-color: inherit;
   }
 
   ul {
     &:last-child {
-      margin-bottom: 0; /* override*/
+      margin-bottom: 0;
     }
   }
 }
 
-/* Default notice */
-
-.notice {
-  @include notice($notice-color);
+.notice, .markdown-alert {
+  @include notice($light-gray);
 }
 
-/* Primary notice */
-
-.notice--primary {
-  @include notice($notice-color);
+.notice--primary, .markdown-alert-important {
+  @include notice($primary-color);
 }
 
-/* Info notice */
-
-.notice--info {
+.notice--info, .markdown-alert-note {
   @include notice($info-color);
 }
 
-/* Warning notice */
-
-.notice--warning {
+.notice--warning, .markdown-alert-warning {
   @include notice($warning-color);
 }
 
-/* Success notice */
-
-.notice--success {
+.notice--success, .markdown-alert-tip {
   @include notice($success-color);
 }
 
-/* Danger notice */
-
-.notice--danger {
+.notice--danger, .markdown-alert-caution {
   @include notice($danger-color);
 }
